# XLRON

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  DATA.md  LICENSE  README.md  example_sweep_config.yml  index.html  instructions.md  mkdocs.yml  objects.inv  plot_test.py  pyproject.toml  requirements.txt  run_bandgap_plot.py  run_multiband.sh  setup.py  sitemap.xml  testing.py  train_xlron.sh
.github/workflows/: github-actions.yaml
.streamlit/: config.toml
benchmarks/: aggregate_results.py  plot_benchmarks.py  plot_style.py  run_benchmarks.py  topology_stats.py
capacity_bound_estimation/: cutsets_bounds.py  reconfigurable_routing_bounds.py  reconfigurable_routing_bounds_parallel.py  reconfigurable_routing_bounds_sequential.py
capacity_bounds/: index.html
changelog/: index.html
data_processing/: cut_set_analysis.ipynb  cut_sets_analysis.py  deeprmsa_model_eval.ipynb  deeprmsa_train.ipynb  jocn_benchmarks_rwalr.ipynb  k_path_optimisation.ipynb  kpath_plots.ipynb  model_surgery.ipynb  paths_lengths_hops_plots.py  plot_jpn48.py  rwa_lr_training.ipynb  rwa_lr_training.png.ipynb  summarise_review_table.py
data_processing/JOCN_2024/: heuristic_comparison.sh  heuristic_comparison_k.sh  heuristic_comparison_traffic.sh  heuristic_evaluation.sh  heuristic_evaluation_bounds.sh  run_reconfigurable_routing_bounds.sh  summarise_review_table.py
differentiable_dra/: index.html
docs/: capacity_bounds.md  changelog.md  differentiable_dra.md  flags_reference.md  gn_model.md  gn_model_comparison.md  heuristic_evaluation.md  index.md  installation.md  license.md  papers.md  quickstart.md  reference.md  reproduce_ecoc2026.md  reproduce_jocn2024.md  reproduce_jocn_transformer.md  reproduce_jocn_xlron.md  reproduce_rwalr.md  training.md  understanding_xlron.md
docs/features/: differentiable.md  gui.md  physical_layer.md  speed.md  topologies.md  transformer.md
docs/stylesheets/: xlron.css
examples/: JOCN_2024_Instructions.md  anakin_demo.ipynb  example_sweep_config.yml  example_traffic_requests.csv  gymnax_demo.ipynb  modulations.csv  modulations_64qam.csv  sweep.yaml  xlron_ofc_hyr_demo.ipynb
experimental/: analyze_action_path_ratios.py  analyze_path_lengths.py  plot_style.py
experimental/ISRSGN2025/: run_lp.py  single_link_experiments.ipynb  throughput_plots.ipynb
experimental/OFC2025/: bbp_vs_intensity.py  load_pickle.py  process_log.py  training.py
experimental/ONDM2025/: fixed_lp_sweep.py  rwa_lr_evaluation.ipynb  rwa_lr_training.ipynb
experimental/benchmarks/: aggregate_results.py  plot_benchmarks.py  plot_deeprmsa_comparison.py  run_benchmarks.py  topology_stats.py
experimental/capacity_bound_estimation/: cutsets_bounds.py  reconfigurable_routing_bounds.py  reconfigurable_routing_bounds_parallel.py  reconfigurable_routing_bounds_sequential.py
experimental/capacity_bounds_survey/: 01_discover_load_ranges.py  02_compare_heuristics.py  02_run_heuristic_eval.py  03_run_cutset_bounds.py  03b_run_cutset_bounds_top1pct.py  04_run_rr_bounds.py  05_run_k_sensitivity.py  06_analyze_results.py  config.py  run_all.py  warmup_ksp_cache.py
experimental/differentiable/: case_1.py  differentiable.ipynb  gradient_sense_check.py  optimize_actions.py  optimize_actions_sgd.py  plot_optimization_convergence.py  plot_test_case.py  plot_topology_diagram.py  test_case_1.py
experimental/func_benchmarks/: benchmarks.py
experimental/large_topologies/: analyze_action_path_ratios.py  analyze_path_lengths.py  plot_large_topologies.py  process_slot_occupancy.py
experimental/topology_visualization/: plot_all_topologies.sh  plot_topology.py
experimental/trajectory_visualization/: instructions.md
experimental/validation/: gerard2025_validation.py  pump_optimization.py  select_pump_history.py
experimental/vf_pretraining/: vf_pretraining.ipynb
features/differentiable/: index.html
features/gui/: index.html
features/physical_layer/: index.html
features/speed/: index.html
features/topologies/: index.html
features/transformer/: index.html
flags_reference/: index.html
gn_model/: index.html
gn_model_comparison/: index.html
heuristic_evaluation/: index.html
images/demos/: deeprmsa_transformer.webm
installation/: index.html
license/: index.html
modulations/: modulations_deeprmsa.csv  modulations_nsfnet.csv
notebooks/: anakin_demo.ipynb  gymnax_demo.ipynb
ondrlax/environments/: __init__.py  env_funcs.py  rsa.py  vone.py
ondrlax/train/: train_ppo.py
papers/: index.html
quickstart/: index.html
reference/: index.html
reproduce_ecoc2026/: index.html
reproduce_jocn2024/: index.html
reproduce_jocn_transformer/: index.html
reproduce_jocn_xlron/: index.html
reproduce_rwalr/: index.html
search/: search_index.json
tests/: __init__.py  env_test.py
topologies/: 5node.json  conus.json  cost239.json  cost239_deeprmsa_directed.json  cost239_ptrnet_directed.json  cost239_ptrnet_real_undirected.json  cost239_ptrnet_undirected.json  example_traffic_requests.csv  jpn48_directed.json  jpn48_undirected.json  modulations.json  nsfnet.json  nsfnet_deeprmsa_undirected.json  usnet_gcnrnn_directed.json  usnet_gcnrnn_undirected.json  usnet_ptrnet_directed.json
traffic_matrices/: deeprmsa_nsfnet_traffic_matrix.csv
training/: index.html
understanding_xlron/: index.html
validation/: gerard2025_validation.py  pump_optimization.py
xlron/: __init__.py  dtype_config.py  parameter_flags.py
xlron/bounds/: cutsets_bounds.py  reconfigurable_routing_bounds.py  reconfigurable_routing_bounds_sequential.py
xlron/diff_sim/: direct_action_optimization.py  run_direct_optimization.py
xlron/environments/: __init__.py  benchmark_mixed_precision.py  dataclasses.py  dfiff_utils_test.py  diff_utils.py  diff_utils_test.py  dtype_config.py  env_funcs.py  env_funcs_test.py  env_test.py  heuristics.py  heuristics_test.py  isrs_gn_model.py  make_env.py  make_env_test.py  mixed_precision_test.py  rsa.py  rsa_test.py  vone.py  vone_test.py  wrappers.py
xlron/eval/: eval_heuristic.py
xlron/gui/: __init__.py  app.py  presets.py  process.py  widgets.py
(+482 files in other folders)
