[project]
name = "xlron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py>=2.3.1",
    "black>=25.9.0",
    "cffi>=2.0.0",
    "chex>=0.1.91",
    "cython>=3.1.5",
    "distrax>=0.1.7",
    "equinox>=0.13.2",
    "griffe>=1.14.0",
    "gymnax>=0.0.9",
    "ipykernel>=7.0.1",
    "jax>=0.8.0",
    "jaxopt>=0.8.5",
    "jaxtyping>=0.3.3",
    "joblib>=1.5.2",
    "jraph>=0.0.6.dev0",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python>=1.18.2",
    "mkdocstrings[python]>=0.30.1",
    "mkinit>=1.1.0",
    "ml-dtypes>=0.5.3",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "orbax>=0.1.9",
    "penzai>=0.2.5",
    "pip>=25.2",
    "progress>=1.6.1",
    "pylance>=0.38.2",
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]


[dependency-groups]
gpu = [
  "jax[cuda12]"
]
