[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "black>=25.9.0",
    "cffi>=2.0.0",
    "chex>=0.1.91",
    "cython>=3.1.5",
    "diffrax>=0.7.1",
    "distrax>=0.1.7",
    "equinox>=0.13.2",
    "griffe>=1.14.0",
    "gymnax>=0.0.9",
    "imageio[ffmpeg,pyav]>=2.37.2",
    "ipykernel>=7.0.1",
    "isort>=7.0.0",
    "jax>=0.8.0",
    "jaxopt>=0.8.5",
    "jaxtyping>=0.3.3",
    "joblib>=1.5.2",
    "jraph>=0.0.6.dev0",
    "jupyter>=1.1.1",
    "mkinit>=1.1.0",
    "ml-dtypes>=0.5.3",
    "networkx>=3.5",
    "numpy>=2.4.1",
    "orbax>=0.1.9",
    "penzai>=0.2.5",
    "pip>=25.2",
    "progress>=1.6.1",
    "pylance>=0.38.2",
    "pymongo>=4.15.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-box>=7.3.2",
    "pyyaml>=6.0.3",
    "ruff>=0.14.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.38.0",
    "tqdm>=4.67.1",
    "ty>=0.0.1a25",
    "wandb>=0.22.2",
]

[project.scripts]
xlron = "xlron.gui:main"


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
gpu = [
  "jax[cuda12]"
]
tpu = [
  "jax[tpu]"
]

[project.optional-dependencies]
gui = [
  "watchdog>=6.0.0",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
  "mkdocstrings[python]",
]

[tool.ruff]
exclude = [
  "__init__.py",
  "examples/",
  "experimental/",
  "xlron/train/multidevice/",
  "xlron/data/topologies/topology_bench/",
]
line-length = 100

[tool.ruff.lint]
ignore = ["E731"]

[tool.ruff.lint.per-file-ignores]
"xlron/models/transformer.py" = ["F722", "F403", "F405"]
"*_test.py" = ["F403", "F405"]
"xlron/environments/deeprmsa/deeprmsa.py" = ["F403", "F405"]
"xlron/environments/gn_model/rmsa_gn_model.py" = ["F403", "F405"]
"xlron/environments/gn_model/rsa_gn_model.py" = ["F403", "F405"]
"xlron/environments/rsa/rsa.py" = ["F403", "F405"]
"xlron/environments/rwa_lightpath_reuse/rwa_lightpath_reuse.py" = ["F403", "F405"]
"xlron/environments/vone/vone.py" = ["F403", "F405"]
"xlron/heuristics/heuristics.py" = ["F403", "F405"]
"xlron/diff_sim/direct_action_optimization.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["."]
collect_ignore_glob = ["xlron/environments/vone/*"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = ["notebooks", ".venv"]

[tool.ty.src]
exclude = [
  ".claude/",
  "examples/",
  "experimental/",
  "xlron/train/multidevice/",
  "xlron/data/topologies/topology_bench/",
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
division-by-zero = "warn"
too-many-positional-arguments = "ignore"
not-subscriptable = "ignore"
possibly-missing-attribute = "ignore"
# JAX JIT-related false positives - JIT-wrapped functions lose type information.
# `unresolved-attribute` is intentionally NOT suppressed here so that real
# subclass-narrowing and missing-field bugs surface; per-line
# `# ty: ignore[unresolved-attribute]` is used for the JAX/numpy stub
# residuals that can't be fixed in user code.
unknown-argument = "ignore"  # JIT-wrapped functions lose parameter names
invalid-argument-type = "ignore"  # JIT-wrapped functions have JitWrapped return types
not-iterable = "ignore"  # JitWrapped types not recognized as iterable
invalid-assignment = "ignore"  # JitWrapped return types cause assignment errors
unsupported-operator = "ignore"  # Array operations not recognized
invalid-return-type = "ignore"  # JIT-wrapped function return types
call-non-callable = "ignore"  # JIT-wrapped functions seen as non-callable
invalid-method-override = "ignore"  # Subclasses with more specific type annotations
invalid-parameter-default = "ignore"  # Function defaults with compatible but not identical signatures
no-matching-overload = "ignore"  # JAX numpy function overloads not properly recognized
